<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:animateLayoutChanges="true"
    android:paddingLeft="8dp"
    tools:context=".Registrar">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/usuario"
            android:text="@string/usuario"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="121dp" />

        <EditText
            android:id="@+id/editTextText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="text"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="153dp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/Correo"
            android:text="@string/Correo"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="210dp" />

        <EditText
            android:id="@+id/editTextTextEmailAddress4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="242dp" />

        <TextView
            android:id="@+id/contrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Contrasenia"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="299dp" />

        <EditText
            android:id="@+id/editTextTextPassword6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="330dp" />

        <TextView
            android:id="@+id/contraseniar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/contrasenia2"
            android:text="@string/contrasenia2"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="388dp" />

        <EditText
            android:id="@+id/editTextTextPassword7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="419dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:onClick="Registro"
            android:text="@string/btnRegistrar"
            android:textColorLink="@color/design_default_color_secondary" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>